--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/prashant174/prashant174..github.io#readme",
   "dependencies": {
+    "axios": "^1.6.0",
     "github-calendar": "^2.3.2"
   }
 }
