--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "homepage": "https://github.com/prashant174/prashant174..github.io#readme",
   "dependencies": {
     
-    "github-calendar": "^2.3.2",
-    "react-github-calendar": "^4.0.1"
+    "github-calendar": "^2.3.2"
+   
   }
 }
