--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "prashant174..github.io",
+  "name": "omp12345..github.io",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
